# afp-agents

./: .env.template  .gitignore  LICENSE  README.md  bankruptcy-railway.toml  closeout-railway.toml  liquidation-railway.toml  nixpacks.toml  pyproject.toml
bankruptcy/: __main__.py  service.py
closeout/: __main__.py  service.py
liquidation/: __main__.py  bid.py  model.py  reseller.py  service.py
notifications/: __init__.py  healthcheck.py  utils.py
subquery/: client.py  model.py  query.py
tests/: conftest.py  test_bankruptcy_service.py  test_closeout_service.py  test_liquidation_service.py
utils/: __init__.py
