[project]
name = "afp-agents"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "afp-sdk==0.4.0",
    "gql[all]>=3.5.3",
    "web3>=7.12.0",
    "slack-sdk>=3.36.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.36.0",
    "pyright>=1.1.402",
    "ruff>=0.12.2",
    "pytest>=8.3.5",
]

[tool.poe.tasks]
bankruptcy = { shell = "uv run --env-file .env -m bankruptcy" }
liquidation = { shell = "uv run --env-file .env -m liquidation" }
closeout = { shell = "uv run --env-file .env -m closeout" }
lint = [
    { cmd = "ruff check ." },
    { cmd = "ruff format --check ." },
    { cmd = "pyright ." },
]
test = { cmd = "pytest -v" }

[tool.pyright]
strict = ["."]

[tool.uv.sources]
afp-sdk = { git = "https://github.com/autonity/afp-sdk", rev = "v0.6.0-rc.3" }
